chore: update node, npm dependencies, and suppress JVM warnings